# flower-store-project

./: .env-template  .flake8  README.md  pyproject.toml
src/: __main__.py  config.py  keyboards.py
src/assets/fonts/: __init__.py
src/assets/images/: __init__.py
src/database/: __init__.py  cart.py  chat_history.py  order.py  product.py  user.py
src/handlers/: __init__.py  any_message.py  report_bug.py  start.py  test.py
src/llm/: llm.py  tools.py
src/llm/llm_doings/: __init__.py  time.py
src/llm/llm_doings/database/: product.py  user.py
src/llm/llm_doings/weather/: __init__.py  calculator.py
src/llm/prompts/: entry.py
src/llm_doings/: __init__.py  time.py
src/llm_doings/database/: product.py  user.py
src/llm_doings/weather/: __init__.py  calculator.py  enums.py  weather.py
src/middlewares/: context.py
src/models/: response.py
